# Rubix--NetDefzzzz

./: MANIFEST.in  README.md  README.txt  install.py  pyproject.toml  setup.py
configs/: rubix.linux.yaml  rules.yaml
rubix_pip/: README.md  pyproject.toml  setup.py
rubix_pip/rubix.egg-info/: PKG-INFO  SOURCES.txt
rubix_pip/rubix_defzz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rubix_pip/rubix_installer/: __init__.py  install.py
rubix_pip/rubix_installer/configs/: rubix.common.yaml  rubix.windows.yaml
window/: install.bat
