[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "rubix_defzz"
version         = "1.0.1"
description     = "RUBIX — AI-Powered Network Defence System (IDS/IPS)"
readme          = "README.md"
license         = { text = "Proprietary" }
requires-python = ">=3.8"
keywords        = ["network", "security", "ids", "ips", "packet-capture", "firewall"]
dependencies    = []
authors         = [{ name = "Manik" }]

[project.scripts]
rubix-install = "rubix_installer.install:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
rubix_installer = [
    "bin/windows/rubix.exe",
    "bin/windows/rubix-cli.exe",
    "bin/linux/rubix",
    "bin/linux/rubix-cli",
    "configs/*.yaml",
    "npcap/npcap-1.88.exe",
]